--- a/laboratorium_1/sprawozdanie_1.ipynb
+++ b/laboratorium_1/sprawozdanie_1.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Temat: Cwiczenie 1 - Data Scientist Toolbox\n",
-    "Autor: Michał Badura, number albumu: 407049\n",
-    "\n",
-    "\n",
-    "Zadanie 3:"
+    "Temat: Cwiczenie 1 - Data Scientist Toolbox"
    ],
    "metadata": {
     "collapsed": false
@@ -15,8 +11,26 @@
    "outputs": []
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Autor: Michał Badura, number albumu: 407049"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Zadanie 3:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "outputs": [
     {
      "data": {
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -92,7 +106,7 @@
    ],
    "source": [
     "#najpierw tworze np.array z podpisanymi kolumnami\n",
-    "data = np.array([(\"Katrzyna\", \"Walczak\", 23, \"Woman\" ),\n",
+    "data = np.array([(\"Katarzyna\", \"Walczak\", 23, \"Woman\" ),\n",
     "                 (\"Bartosz\", \"Maciejewski\", 14, \"Man\"),\n",
     "                 (\"Tobiasz\", \"Turban\", 48, \"Man\"),\n",
     "                 (\"Michał\", \"Badura\", 21, \"Man\"),\n",
@@ -110,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "             age\ncount   5.000000\nmean   25.400000\nstd    13.088163\nmin    14.000000\n25%    21.000000\n50%    21.000000\n75%    23.000000\nmax    48.000000",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>5.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>25.400000</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>13.088163</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>14.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>21.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>21.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>23.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>48.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 84,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "       name      surname  age    sex\n0  Katrzyna      Walczak   23  Woman\n1   Bartosz  Maciejewski   14    Man\n2   Tobiasz       Turban   48    Man",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>surname</th>\n      <th>age</th>\n      <th>sex</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Katrzyna</td>\n      <td>Walczak</td>\n      <td>23</td>\n      <td>Woman</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bartosz</td>\n      <td>Maciejewski</td>\n      <td>14</td>\n      <td>Man</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tobiasz</td>\n      <td>Turban</td>\n      <td>48</td>\n      <td>Man</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "        name      surname  age    sex\n0  Katarzyna      Walczak   23  Woman\n1    Bartosz  Maciejewski   14    Man\n2    Tobiasz       Turban   48    Man",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>surname</th>\n      <th>age</th>\n      <th>sex</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Katarzyna</td>\n      <td>Walczak</td>\n      <td>23</td>\n      <td>Woman</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Bartosz</td>\n      <td>Maciejewski</td>\n      <td>14</td>\n      <td>Man</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Tobiasz</td>\n      <td>Turban</td>\n      <td>48</td>\n      <td>Man</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 85,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
