--- a/laboratorium_2/sprawozdanie_2.ipynb
+++ b/laboratorium_2/sprawozdanie_2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 179,
    "outputs": [
     {
      "name": "stdout",
@@ -45,7 +45,8 @@
     "\n",
     "connection = pg.connect(host='pgsql-196447.vipserv.org', port=5432, dbname='wbauer_adb', user='wbauer_adb', password='adb2020')\n",
     "\n",
-    "category = pd.read_sql('select * from category',con=connection)\n",
+    "category = pd.read_sql(\"select * \"\n",
+    "                       \"from category\",con=connection)\n",
     "print(category)"
    ],
    "metadata": {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 180,
    "outputs": [
     {
      "name": "stdout",
@@ -76,7 +77,8 @@
     }
    ],
    "source": [
-    "number = pd.read_sql('select count(name) from category',con=connection)\n",
+    "number = pd.read_sql(\"select count(name) \"\n",
+    "                     \"from category\",con=connection)\n",
     "\n",
     "print(\"Liczba kategorii filmów wynosi: \\n {}\".format(number))"
    ],
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 181,
    "outputs": [
     {
      "name": "stdout",
@@ -123,9 +125,9 @@
    ],
    "source": [
     "\n",
-    "alphabetical = pd.read_sql('select name '\n",
-    "                           'from category '\n",
-    "                           'order by name ASC;',con=connection)\n",
+    "alphabetical = pd.read_sql(\"select name \"\n",
+    "                           \"from category \"\n",
+    "                           \"order by name ASC\",con=connection)\n",
     "print(alphabetical)"
    ],
    "metadata": {
@@ -142,17 +144,32 @@
    }
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 182,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Najstarszy film:              title\n",
+      "0  Chamber Italian \n",
+      "\n",
+      "Najmłodszy film:              title\n",
+      "0  Chamber Italian \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "oldest = pd.read_sql('select title '\n",
-    "                     'from film '\n",
-    "                     'order by release_year ASC '\n",
-    "                        'limit 1' , con=connection)\n",
+    "oldest = pd.read_sql(\"select title \"\n",
+    "                     \"from film \"\n",
+    "                     \"order by release_year ASC \"\n",
+    "                     \"limit 1\", con=connection)\n",
     "\n",
-    "youngest = pd.read_sql('select title '\n",
-    "                     'from film '\n",
-    "                     'order by release_year DESC '\n",
-    "                        'limit 1', con=connection)\n",
+    "youngest = pd.read_sql(\"select title \"\n",
+    "                       \"from film \"\n",
+    "                       \"order by release_year DESC \"\n",
+    "                       \"limit 1\", con=connection)\n",
     "print(\"Najstarszy film: {} \\n\".format(oldest))\n",
     "print(\"Najmłodszy film: {} \\n\".format(youngest))\n"
    ],
@@ -171,21 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 183,
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-68-2a888790b624>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;36m  File \u001B[1;32m\"<ipython-input-68-2a888790b624>\"\u001B[1;36m, line \u001B[1;32m3\u001B[0m\n\u001B[1;33m    'where ((rental_date <= \"2005-08-01\") and (rental_date >= \"2005-07-01\")), con=connection)\u001B[0m\n\u001B[1;37m                                                                                             ^\u001B[0m\n\u001B[1;31mSyntaxError\u001B[0m\u001B[1;31m:\u001B[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   count\n",
+      "0   6709\n"
      ]
     }
    ],
    "source": [
-    "rental_between = pd.read_sql('select * '\n",
-    "                             'from rental '\n",
-    "                             'where ((rental_date <= \"2005-08-01\") and (rental_date >= \"2005-07-01\")), con=connection)\n",
+    "rental_between = pd.read_sql(\"select count(rental_date) \"\n",
+    "                             \"from rental \"\n",
+    "                             \"where rental_date \"\n",
+    "                             \"between '2005-07-01T00:00:00.00' and '2005-08-01T00:00:00.00'\", con=connection)\n",
     "print(rental_between)"
    ],
    "metadata": {
@@ -203,9 +221,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 184,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   count\n",
+      "0      0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rental_between2 = pd.read_sql(\"select count(rental_date) \"\n",
+    "                             \"from rental \"\n",
+    "                             \"where rental_date \"\n",
+    "                             \"between '2010-01-01T00:00:00.00' and '2011-02-01T00:00:00.00'\", con=connection)\n",
+    "print(rental_between2)\n"
+   ],
    "metadata": {
     "collapsed": false
    }
@@ -221,25 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 185,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   payment_id  customer_id  staff_id  rental_id  amount  \\\n",
-      "0       20403          362         1      14759   11.99   \n",
-      "\n",
-      "                payment_date  \n",
-      "0 2007-03-21 21:57:24.996577  \n"
+      "   amount\n",
+      "0   11.99\n"
      ]
     }
    ],
    "source": [
-    "biggest_payment = pd.read_sql('select * '\n",
-    "                              'from payment '\n",
-    "                              'order by amount DESC '\n",
-    "                              'limit 1', con=connection)\n",
+    "biggest_payment = pd.read_sql(\"select amount \"\n",
+    "                              \"from payment \"\n",
+    "                              \"order by amount DESC \"\n",
+    "                              \"limit 1\", con=connection)\n",
     "print(biggest_payment)"
    ],
    "metadata": {
@@ -257,10 +287,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 186,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    customer_id  store_id first_name  last_name\n",
+      "0           284         1      Sonia    Gregory\n",
+      "1           318         1      Brian      Wyman\n",
+      "2           572         1     Sidney   Burleson\n",
+      "3           409         2     Rodney    Moeller\n",
+      "4           332         1    Stephen     Qualls\n",
+      "5           286         1      Velma      Lucas\n",
+      "6            80         1    Marilyn       Ross\n",
+      "7           198         2      Elsie     Kelley\n",
+      "8           103         1     Gladys   Hamilton\n",
+      "9           329         2      Frank   Waggoner\n",
+      "10          128         1   Marjorie     Tucker\n",
+      "11           18         2      Carol     Garcia\n",
+      "12          270         1       Leah     Curtis\n",
+      "13          501         1      Ruben      Geary\n",
+      "14          277         2       Olga    Jimenez\n",
+      "15          156         1     Bertha   Ferguson\n",
+      "16          280         2     Tracey    Barrett\n",
+      "17          250         2         Jo     Fowler\n",
+      "18          571         2    Johnnie   Chisholm\n",
+      "19          562         1    Wallace      Slone\n",
+      "20           21         1   Michelle      Clark\n",
+      "21          380         1    Russell    Brinson\n",
+      "22          558         1     Jimmie  Eggleston\n",
+      "23          232         2  Constance       Reid\n"
+     ]
+    }
+   ],
    "source": [
-    "client = pd.read_sql()"
+    "clients = pd.read_sql(\"select customer.customer_id, customer.store_id, customer.first_name, customer.last_name \"\n",
+    "                      \"from customer \"\n",
+    "                      \"left join address \"\n",
+    "                      \"on customer.address_id = address.address_id \"\n",
+    "                      \"left join city \"\n",
+    "                      \"on address.city_id = city.city_id \"\n",
+    "                      \"left join country \"\n",
+    "                      \"on city.country_id = country.country_id \"\n",
+    "                      \"where country in ('Poland', 'Nigeria', 'Bangladesh')\", con=connection)\n",
+    "print(clients)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ćwiczenie 8:"
    ],
    "metadata": {
     "collapsed": false
@@ -268,9 +348,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 187,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   staff_id first_name last_name    country\n",
+      "0         1       Mike   Hillyer     Canada\n",
+      "1         2        Jon  Stephens  Australia\n"
+     ]
+    }
+   ],
+   "source": [
+    "origin = pd.read_sql(\"select staff.staff_id, staff.first_name, staff.last_name, country.country \"\n",
+    "                     \"from staff \"\n",
+    "                     \"left join address \"\n",
+    "                     \"on staff.address_id = address.address_id \"\n",
+    "                     \"left join city \"\n",
+    "                     \"on address.city_id = city.city_id \"\n",
+    "                     \"left join country \"\n",
+    "                     \"on city.country_id = country.country_id\", con=connection)\n",
+    "print(origin)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ćwiczenie 9:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liczba pracowników w Hiszpanii i Argentynie: \n",
+      "    count\n",
+      "0      0\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = pd.read_sql(\"select count(staff.staff_id) \"\n",
+    "                  \"from staff \"\n",
+    "                  \"left join address \"\n",
+    "                  \"on staff.address_id = address.address_id \"\n",
+    "                  \"left join city \"\n",
+    "                  \"on address.city_id = city.city_id \"\n",
+    "                  \"left join country \"\n",
+    "                  \"on city.country_id = country.country_id \"\n",
+    "                  \"where country in ('Argentina', 'Spain')\", con=connection)\n",
+    "print(\"Liczba pracowników w Hiszpanii i Argentynie: \\n {}\".format(num))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ćwiczenie 10:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           name\n",
+      "0        Sports\n",
+      "1      Classics\n",
+      "2           New\n",
+      "3        Family\n",
+      "4        Comedy\n",
+      "5     Animation\n",
+      "6        Travel\n",
+      "7         Music\n",
+      "8         Drama\n",
+      "9        Horror\n",
+      "10       Sci-Fi\n",
+      "11        Games\n",
+      "12  Documentary\n",
+      "13      Foreign\n",
+      "14       Action\n",
+      "15     Children\n"
+     ]
+    }
+   ],
+   "source": [
+    "rented = pd.read_sql(\"select distinct category.name \"\n",
+    "                     \"from category \"\n",
+    "                     \"inner join film_category \"\n",
+    "                     \"on category.category_id = film_category.category_id \"\n",
+    "                     \"inner join film \"\n",
+    "                     \"on film_category.film_id = film.film_id \"\n",
+    "                     \"inner join inventory \"\n",
+    "                     \"on film.film_id = inventory.film_id \"\n",
+    "                     \"inner join rental \"\n",
+    "                     \"on inventory.inventory_id = rental.inventory_id\", con=connection)\n",
+    "print(rented)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ćwiczenie 11:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [name]\n",
+      "Index: []\n",
+      "Nie wypożyczono żadnego filmu\n"
+     ]
+    }
+   ],
+   "source": [
+    "rented_us = pd.read_sql(\"select distinct category.name \"\n",
+    "                     \"from category \"\n",
+    "                     \"inner join film_category \"\n",
+    "                     \"on category.category_id = film_category.category_id \"\n",
+    "                     \"inner join film \"\n",
+    "                     \"on film_category.film_id = film.film_id \"\n",
+    "                     \"inner join inventory \"\n",
+    "                     \"on film.film_id = inventory.film_id \"\n",
+    "                     \"inner join rental \"\n",
+    "                     \"on inventory.inventory_id = rental.inventory_id \"\n",
+    "                     \"inner join staff \"\n",
+    "                     \"on rental.staff_id = staff.staff_id \"\n",
+    "                     \"inner join store \"\n",
+    "                     \"on staff.store_id = store.store_id \"\n",
+    "                     \"inner join address \"\n",
+    "                     \"on store.address_id = address.address_id \"\n",
+    "                     \"inner join city \"\n",
+    "                     \"on address.city_id = city.city_id \"\n",
+    "                     \"inner join country \"\n",
+    "                     \"on city.country_id = country.country_id \"\n",
+    "                     \"where country.country in ('United States')\", con=connection)\n",
+    "print(rented_us)\n",
+    "print(\"Nie wypożyczono żadnego filmu\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Ćwiczenie 12:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                title\n",
+      "0     Bilko Anonymous\n",
+      "1   Caribbean Liberty\n",
+      "2    Casper Dragonfly\n",
+      "3    Empire Malkovich\n",
+      "4       Floats Garden\n",
+      "..                ...\n",
+      "64       Outlaw Hanky\n",
+      "65    Panky Submarine\n",
+      "66   Rider Caddyshack\n",
+      "67          Won Dares\n",
+      "68      Wyoming Storm\n",
+      "\n",
+      "[69 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "titles = pd.read_sql(\"select film.title \"\n",
+    "                     \"from film \"\n",
+    "                     \"left join film_actor \"\n",
+    "                     \"on film.film_id = film_actor.film_id \"\n",
+    "                     \"left join actor \"\n",
+    "                     \"on film_actor.actor_id = actor.actor_id \"\n",
+    "                     \"where (first_name = 'Olympia' and last_name = 'Pfeiffer') or (first_name = 'Julia' and last_name = 'Zellweger') or (first_name = 'Ellen' and last_name = 'Presley')\", con=connection)\n",
+    "print(titles)"
+   ],
    "metadata": {
     "collapsed": false
    }
